bad/for_bool_over_void.example_compiler_output
ERROR
[1mbad/for_bool_over_void.lat:4:19: [1;31merror: [0;1mfor cannot iterate over value of non-array type `void`[m
	for (boolean x : vfunc()) {}
	                 [1;32m^[m
